<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_purple"
    android:orientation="vertical"   
    android:padding="20dp"
    tools:context=".activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="#ffff00"
                android:textSize="34sp"
                />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/insert_number"
                android:textAlignment="center"
                android:textColor="#ffff00"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                />

            <Button
                android:id="@+id/button_guess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:backgroundTint="#ffff00"
                android:text="@string/guess"
                android:textAlignment="center"
                android:textColor="#9400d3" />

            <TextView
                android:id="@+id/textViewEsito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="#ffff00"
                />

            <TextView
                android:id="@+id/textNumTentativi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/tentativi"
                android:textColor="#ffff00" />

            <TextView
                android:id="@+id/textMedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/average"
                android:textColor="#ffff00" />

            <TextView
                android:id="@+id/textPunteggio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/punteggio"
                android:textColor="#ffff00" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="264dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                app:srcCompat="@drawable/images" />

            <Button
                android:id="@+id/buttonNewGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="#ffff00"
                android:text="@string/new_game"
                android:textAlignment="center"
                android:textColor="#9400d3" />

            <Button
                android:id="@+id/button_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="#ffff00"
                android:textAlignment="center"
                android:textColor="#9400d3"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>